# ConsoleInteractionLibrary

./: README.md
ConsoleInteractionLibrary/: CMakeLists.txt
ConsoleInteractionLibrary/src/: Authorization.cpp  Authorization.h  CMakeLists.txt  ChangeUser.cpp  ChangeUser.h  DeletePath.cpp  DeletePath.h  DeleteUser.cpp  DeleteUser.h  Deletepath.cpp  Deleteuser.cpp  Input.cpp  Input.h  Libraries.h  Loginsystem.cpp  Loginsystem.h  Menu.cpp  Menu.h  MenuRunner.cpp  MenuRunner.h  Registration.cpp  Registration.h  main.cpp
ConsoleInteractionLibrary/test/: AllTests.cpp
